# curiefense

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: build-demo-saas-backend.yaml  curiefense-manual-build-image.yml  curiefense-publish-images.yml  e2e-compose-tests.yml  e2e-minikube-filebeat.yml  e2e-minikube-fluentd.yml  retag-demo-datalayer-backend.yaml  retag-demo-infuser_bq-backend.yaml  retag-demo-saas-backend.yaml  run-luacheck.yml  run-shellcheck.yml  versionbump.yml
curiefense/grasshopper/: Cargo.toml  Makefile  test.lua  test2.lua
curiefense/grasshopper/src/: jsapp.js  jsbio.js  lib.rs
curiefense/images/: build-docker-images.sh
curiefense/infuser-bq/: Dockerfile  infuser_bq.cron
curiefense/ui/: package-lock.json  package.json
deploy/: deploy-ci-compose.sh  deploy-ci.sh  deploy-gke.sh  locustfile.py  locusttest.sh  lua_filter.yaml
deploy/compose/: .env  docker-compose-nginx.yaml  docker-compose.yaml
deploy/curiefense-helm/: deploy.sh  expose-services.yaml
deploy/filebeat/: template.json
docs/: AUTOTAGS.md
e2e/: .gitignore  conftest.py  pytest.ini  readme.txt  requirements.txt  set_config.py  test_e2e.py
e2e/core/: base_helper.py  base_helpers.py  config.py
e2e/data/: acl_data.json  rl_data.json
e2e/helpers/: acl_helper.py  log_helper.py  rl_argument_helper.py  rl_attribute_helper.py  rl_cookie_helper.py  rl_header_helper.py  rl_helper.py  rl_http_helper.py  tag_rule_default_helper.py  tag_rule_monitor_helper.py  tag_rules_helper.py  tag_rules_helper_copy.py  url_map_helper.py  (+2 more)
(+229 files in other folders)
